--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="w-screen h-screen">
+	<body class="w-screen h-screen container mx-auto px-4">
 		<slot />
 	</body>
 </html>
