basic navbar navigation setup

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,9 +1,11 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Navbar from "../components/Navbar.astro"
 ---
 
 <Layout title="Future Creators | Contact">
   <main>
+    <Navbar/>
     <p>Contact page of Future Creators Website</p>
     <a href="/" class="underline text-blue-600"
       >Go back to home page
