--- a/src/pages/ourteam.astro
+++ b/src/pages/ourteam.astro
@@ -3,10 +3,10 @@ import Layout from "../layouts/Layout.astro";
 import Navbar from "../components/Navbar.astro"
 ---
 
-<Layout title="Future Creators | Projects">
+<Layout title="Future Creators | Our team">
   <main>
     <Navbar/>
-    <p>Projects page of Future Creators Website</p>
+    <p>Our team page of Future Creators Website</p>
     <a href="/" class="underline text-blue-600"
       >Go back to home page
       <span>&rarr;</span>
