--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,6 +4,7 @@
 <nav class="border-gray-200 bg-gray-50 dark:bg-gray-800 dark:border-gray-700">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto py-6 px-8">
     <a href="/" class="flex items-center space-x-2 rtl:space-x-reverse">
+      <!-- replace with uafc.ca once we get to hosting -->
       <img src="https://images.squarespace-cdn.com/content/v1/613d6c98681a0134da747eee/83ef0a13-cb88-4876-ba6a-2b4c65e9d6e6/name_hand.png?format=1500w" class="h-20" alt="UAFC Logo" />
     </a>
     <button data-collapse-toggle="navbar-hamburger" type="button" class="inline-flex items-center justify-center p-2 w-10 h-10 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-hamburger" aria-expanded="false">
