added footer, formsubmit forms, mentee page google form button, adjusted colours and styles

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,15 +1,17 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Navbar from "../components/Navbar.astro"
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout title="Future Creators | About">
+  <Navbar/>
   <main>
-    <Navbar/>
     <p>About page of Future Creators Website</p>
     <a href="/" class="underline text-blue-600"
       >Go back to home page
       <span>&rarr;</span>
     </a>
   </main>
+  <Footer/>
 </Layout>
