--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,12 @@
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 import Navbar from "../components/Navbar.astro"
-
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout title="Future Creators Website">
+  <Navbar/>
   <main>
-    <Navbar/>
     <div class="text-5xl my-6">Hello Future Creators!</div>
     <div class="flex gap-4">
       <Card
@@ -22,4 +22,5 @@ import Navbar from "../components/Navbar.astro"
       />
     </div>
   </main>
+  <Footer/>
 </Layout>
