--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,7 +1,7 @@
 ---
 
 ---
-<nav class="border-gray-200 bg-gray-50 dark:bg-gray-800 dark:border-gray-700">
+<nav class="border-gray-200 bg-gray-50 dark:bg-neutral-800 dark:border-gray-700">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto py-6 px-8">
     <a href="/" class="flex items-center space-x-2 rtl:space-x-reverse">
       <!-- replace with uafc.ca once we get to hosting -->
@@ -14,7 +14,7 @@
       </svg>
     </button>
     <div class="hidden w-full md:flex md:w-auto" id="navbar-hamburger">
-      <ul class="flex flex-col font-medium mt-4 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700 md:flex-row md:space-x-4 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-transparent">
+      <ul class="flex flex-col font-medium mt-4 rounded-lg bg-gray-50 dark:bg-neutral-800 dark:border-gray-700 md:flex-row md:space-x-4 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-transparent">
         <li>
           <a href="/about" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white">About Us</a>
         </li>
