--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,15 +1,60 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Navbar from "../components/Navbar.astro"
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout title="Future Creators | Contact">
+  <Navbar/>
   <main>
-    <Navbar/>
     <p>Contact page of Future Creators Website</p>
     <a href="/" class="underline text-blue-600"
       >Go back to home page
       <span>&rarr;</span>
     </a>
+    <div class="container mx-auto p-8 max-w-lg">
+      <h1 class="text-3xl font-bold text-center mb-8">Contact Us</h1>
+      <form 
+        target="_blank" 
+        action="https://formsubmit.co/8b32bdecaca8eea4663458bd92f64c0f" 
+        method="POST" 
+        class="bg-white p-8 rounded-lg shadow-md border border-gray-400">
+        <div class="mb-6">
+          <div class="flex flex-col md:flex-row gap-4">
+            <div class="flex-1">
+              <h1 class="font-semibold mb-2">Full Name (required)</h1>
+              <input 
+                type="text" 
+                name="name" 
+                class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" 
+                placeholder="Full Name" 
+                required/>
+            </div>
+            <div class="flex-1">
+              <h1 class="font-semibold mb-2">Email (required)</h1>
+              <input 
+                type="email" 
+                name="email" 
+                class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" 
+                placeholder="Email" 
+                required/>
+            </div>
+          </div>
+        </div>
+        <div class="mb-6">
+          <h1 class="font-semibold mb-2">Message (required)</h1>
+          <textarea 
+            placeholder="Message" 
+            class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" 
+            name="message" 
+            rows="10" 
+            required></textarea>
+        </div>
+        <button 
+          type="submit" 
+          class="w-full bg-sky-950 text-white py-3 rounded-lg hover:bg-blue-700 transition duration-200">Submit</button>
+      </form>
+    </div>
   </main>
+  <Footer/>
 </Layout>
