--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -1,16 +1,17 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Navbar from "../components/Navbar.astro"
-
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout title="Future Creators | Gallery">
+  <Navbar/>
   <main>
-    <Navbar/>
     <p>Gallery page of Future Creators Website</p>
     <a href="/" class="underline text-blue-600"
       >Go back to home page
       <span>&rarr;</span>
     </a>
   </main>
+  <Footer/>
 </Layout>
