--- a/src/pages/volunteers.astro
+++ b/src/pages/volunteers.astro
@@ -85,6 +85,9 @@ import Footer from "../components/Footer.astro";
           class="w-full bg-sky-950 text-white py-3 rounded-lg hover:bg-blue-700 transition duration-200">
           Sign Up
         </button>
+        <input type="hidden" name="_next" value="https://www.uafc.ca/">
+        <!-- disables captcha -->
+        <input type="hidden" name="_captcha" value="false">
       </form>
     </div>
     <br>
