--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import Navbar from '../components/Navbar.astro';
+
 interface Props {
 	title: string;
 }
@@ -16,7 +18,10 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="w-screen h-screen container mx-auto px-4">
-		<slot />
+	<body class="w-screen h-screen">
+		<Navbar/>
+		<main class="container mx-auto px-4">
+			<slot />
+		</main>
 	</body>
 </html>
