--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Navbar from '../components/Navbar.astro';
+import Footer from '../components/Footer.astro';
 
 interface Props {
 	title: string;
@@ -23,5 +24,6 @@ const { title } = Astro.props;
 		<main class="container mx-auto px-4">
 			<slot />
 		</main>
+		<Footer/>
 	</body>
 </html>
