mentee page work + organization/formatting and other small fixes

--- a/src/pages/mentees.astro
+++ b/src/pages/mentees.astro
@@ -9,7 +9,7 @@ import Layout from "../layouts/Layout.astro";
     <div class="card bg-stone-200 lg:card-side bg-base-100 shadow-xl">
       <figure>
         <img
-          src="/src/img/mentees1.jpg"
+          src="/src/img/menteePage/mentees1.jpg"
           alt="Picture of a Mentee!" />
       </figure>
       <div class="card-body">
@@ -31,7 +31,7 @@ import Layout from "../layouts/Layout.astro";
           </div>
           <figure>
             <img
-              src="/src/img/mentees2.jpeg"
+              src="/src/img/menteePage/mentees2.jpeg"
               alt="A picture of one of our mentees!"
               class="object-cover w-full"
               style="height: 30rem; width: 30rem;"/>
@@ -40,7 +40,7 @@ import Layout from "../layouts/Layout.astro";
       </div>
       <!-- right side text box area -->
        <!-- the code below is very janky, will need to fix in the future -->
-      <div class="card w-1/2 bg-white p-6 shadow-xl text-center bg-stone-200 h-full"
+      <div class="card w-1/2 p-6 shadow-xl text-center bg-stone-200 h-full"
       style="height: 41.5rem;"
       >
         <h2 class="text-3xl font-bold mb-4">1. Apply</h2>
@@ -68,7 +68,7 @@ import Layout from "../layouts/Layout.astro";
     <div class="card bg-slate-500 lg:card-side bg-base-100 shadow-xl">
       <figure>
         <img
-          src="/src/img/mentees3.jpg"
+          src="/src/img/menteePage/mentees3.jpg"
           alt="Picture of a Mentee!"
           style="height: 25rem; width: 25rem;"
           />
