changed form font colour to white

--- a/src/pages/mentees.astro
+++ b/src/pages/mentees.astro
@@ -74,7 +74,7 @@ import Layout from "../layouts/Layout.astro";
           style="height: 25rem; width: 25rem;"
           />
       </figure>
-      <div class="card-body">
+      <div class="card-body text-white">
         <h2 class="card-title text-2xl">Become A Mentee.</h2>
         <span class="text-lg">Our Winter 2024 Mentorship has already begun and applications are now CLOSED.</span>
         <span class="text-lg">But don’t worry, pre sign-up for our Fall 2024 Mentorship Sessions and we will email you when applications officially open!</span>
