--- a/src/pages/volunteers.astro
+++ b/src/pages/volunteers.astro
@@ -48,7 +48,7 @@ import Layout from "../layouts/Layout.astro";
           class="w-full h-full object-cover" />
       </div>
 
-      <div class="w-1/2 bg-slate-500 p-8">
+      <div class="w-1/2 bg-slate-500 p-8 text-white">
         <h1 class="text-3xl font-bold text-center mb-8">Become a Volunteer!</h1>
         <span class="text-lg font-bold text-center mb-8">Sign up now and we’ll help you onboard!</span>
         <form 
