--- a/src/components/Project_Card.astro
+++ b/src/components/Project_Card.astro
@@ -15,7 +15,7 @@ const { title, body, my_img, alt_name } = Astro.props;
     <img class="w-full h-80 object-cover" src={my_img}, alt={alt_name}/>
   </figure>
 
-  <div class="card-body">
+  <div class="card-body bg-stone-200">
 
     <h2 class="card-title">{title}</h2>
     <p>{body} </p>
