fix: image and static files path moved to public dir

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Layout from "../layouts/Layout.astro";
   <main class="flex flex-col gap-y-8">
 
     <figure class="relative w-screen left-1/2 right-1/2 -mx-[50vw]">
-        <img class="object-cover" src="src/img/homepage_vid.png", alt="Future Creators Home Page Background"/>
+        <img class="object-cover" src="/homepage_vid.png", alt="Future Creators Home Page Background"/>
     </figure>
 
     <div class="text-5xl my-6">Empowering youth to create their own technological project.</div>
@@ -30,7 +30,7 @@ import Layout from "../layouts/Layout.astro";
 
     <div class="text-5xl mt-6 my-12 bg-zinc-800 flex justify-around items-center p-12 gap-x-12">
       <div>
-        <img class="object-cover" src="src/img/IMG-6260.jpg", alt="Future Creators Home Page Background"/>
+        <img class="object-cover" src="/IMG-6260.jpg", alt="Future Creators Home Page Background"/>
         <br>
         <div class="text-white">Prospective Volunteers.</div>
         <br>
@@ -39,7 +39,7 @@ import Layout from "../layouts/Layout.astro";
         <Button text="Become a volunteer" href="/volunteers" />
       </div>
       <div>
-        <img class="object-cover" src="src/img/IMG-6263.jpg", alt="Future Creators Home Page Background"/>
+        <img class="object-cover" src="/IMG-6263.jpg", alt="Future Creators Home Page Background"/>
         <br>
         <div class="text-white">Prospective Mentees.</div>
         <br>
