--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,7 +5,7 @@
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto py-6 px-8">
     <a href="/" class="flex items-center space-x-2 rtl:space-x-reverse">
       <!-- replace with uafc.ca once we get to hosting -->
-      <img src="/src/img/logo.png" class="h-20" alt="UAFC Logo" />
+      <img src="/logo.png" class="h-20" alt="UAFC Logo" />
     </a>
     <button data-collapse-toggle="navbar-hamburger" type="button" class="inline-flex items-center justify-center p-2 w-10 h-10 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-hamburger" aria-expanded="false">
       <span class="sr-only">Open main menu</span>
