--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -13,60 +13,60 @@ import Layout from "../layouts/Layout.astro";
       <br> <br>
       <div class="flex space-x-4 justify-center">
         <a href="https://instagram.com/futurecreatorsuofa" target="_blank">
-          <img src="/src/img/contactPage/instagram.svg" alt="Instagram" class="h-8 w-8 hover:opacity-75">
+          <img src="/contactPage/instagram.svg" alt="Instagram" class="h-8 w-8 hover:opacity-75">
         </a>
         <a href="https://www.facebook.com/uafuturecreators" target="_blank">
-          <img src="/src/img/contactPage/facebook.svg" alt="Facebook" class="h-8 w-8 hover:opacity-75">
+          <img src="/contactPage/facebook.svg" alt="Facebook" class="h-8 w-8 hover:opacity-75">
         </a>
         <a href="https://twitter.com/_uafc" target="_blank">
-          <img src="/src/img/contactPage/twitter.svg" alt="Twitter" class="h-8 w-8 hover:opacity-75">
+          <img src="/contactPage/twitter.svg" alt="Twitter" class="h-8 w-8 hover:opacity-75">
         </a>
         <a href="https://www.linkedin.com/company/ualberta-future-creators/" target="_blank">
-          <img src="/src/img/contactPage/linkedin.svg" alt="LinkedIn" class="h-8 w-8 hover:opacity-75">
+          <img src="/contactPage/linkedin.svg" alt="LinkedIn" class="h-8 w-8 hover:opacity-75">
         </a>
         <a href="https://www.youtube.com/channel/UC9fviTxM6vdBN8gz-C9dIJA" target="_blank">
-          <img src="/src/img/contactPage/youtube.svg" alt="YouTube" class="h-8 w-8 hover:opacity-75">
+          <img src="/contactPage/youtube.svg" alt="YouTube" class="h-8 w-8 hover:opacity-75">
         </a>
         <a href="mailto:uafc@ualberta.ca" target="_blank">
-          <img src="/src/img/contactPage/mail.svg" alt="Email" class="h-8 w-8 hover:opacity-75">
+          <img src="/contactPage/mail.svg" alt="Email" class="h-8 w-8 hover:opacity-75">
         </a>
       </div>
       <br>
-  
-      <form 
-        target="_blank" 
-        action="https://formsubmit.co/8b32bdecaca8eea4663458bd92f64c0f" 
-        method="POST" 
+
+      <form
+        target="_blank"
+        action="https://formsubmit.co/8b32bdecaca8eea4663458bd92f64c0f"
+        method="POST"
         class="bg-white p-8 rounded-lg shadow-md border border-stone-200">
         <div class="mb-6">
           <div class="flex flex-col md:flex-row gap-4">
             <div class="flex-1">
               <h1 class="font-semibold mb-2">Full Name (required)</h1>
-              <input 
-                type="text" 
-                name="name" 
-                class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" 
-                placeholder="Full Name" 
+              <input
+                type="text"
+                name="name"
+                class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600"
+                placeholder="Full Name"
                 required/>
             </div>
             <div class="flex-1">
               <h1 class="font-semibold mb-2">Email (required)</h1>
-              <input 
-                type="email" 
-                name="email" 
-                class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" 
-                placeholder="Email" 
+              <input
+                type="email"
+                name="email"
+                class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600"
+                placeholder="Email"
                 required/>
             </div>
           </div>
         </div>
         <div class="mb-6">
           <h1 class="font-semibold mb-2">Message (required)</h1>
-          <textarea 
-            placeholder="Message" 
-            class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" 
-            name="message" 
-            rows="10" 
+          <textarea
+            placeholder="Message"
+            class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600"
+            name="message"
+            rows="10"
             required></textarea>
         </div>
         <button type="submit" class="w-full bg-sky-950 text-white py-3 rounded-lg hover:bg-blue-700 transition duration-200">Submit</button>
@@ -75,7 +75,7 @@ import Layout from "../layouts/Layout.astro";
         <input type="hidden" name="_captcha" value="false">
       </form>
     </div>
-    
-    
+
+
   </main>
 </Layout>
