--- a/src/pages/mentees.astro
+++ b/src/pages/mentees.astro
@@ -9,7 +9,7 @@ import Layout from "../layouts/Layout.astro";
     <div class="card bg-stone-200 lg:card-side bg-base-100 shadow-xl">
       <figure>
         <img
-          src="/src/img/menteePage/mentees1.jpg"
+          src="/menteePage/mentees1.jpg"
           alt="Picture of a Mentee!" />
       </figure>
       <div class="card-body">
@@ -31,7 +31,7 @@ import Layout from "../layouts/Layout.astro";
           </div>
           <figure>
             <img
-              src="/src/img/menteePage/mentees2.jpeg"
+              src="/menteePage/mentees2.jpeg"
               alt="A picture of one of our mentees!"
               class="object-cover w-full"
               style="height: 30rem; width: 30rem;"/>
@@ -69,7 +69,7 @@ import Layout from "../layouts/Layout.astro";
     <div class="card bg-slate-500 lg:card-side bg-base-100 shadow-xl">
       <figure>
         <img
-          src="/src/img/menteePage/mentees3.jpg"
+          src="/menteePage/mentees3.jpg"
           alt="Picture of a Mentee!"
           style="height: 25rem; width: 25rem;"
           />
