updated volunteer form text colourt to be black instead of white

--- a/src/pages/volunteers.astro
+++ b/src/pages/volunteers.astro
@@ -62,7 +62,7 @@ import Layout from "../layouts/Layout.astro";
                 <input 
                   type="text" 
                   name="name" 
-                  class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" 
+                  class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 text-black" 
                   placeholder="Full Name" 
                   required/>
               </div>
@@ -71,7 +71,7 @@ import Layout from "../layouts/Layout.astro";
                 <input 
                   type="email" 
                   name="email" 
-                  class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" 
+                  class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 text-black" 
                   placeholder="Email" 
                   required/>
               </div>
@@ -80,7 +80,7 @@ import Layout from "../layouts/Layout.astro";
                 <input 
                   type="text" 
                   name="faculty" 
-                  class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" 
+                  class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 text-black" 
                   placeholder="E.g. Engineering, Sciences, Business, Arts ..." 
                   required/>
               </div>
@@ -89,7 +89,7 @@ import Layout from "../layouts/Layout.astro";
                 <input 
                   type="text" 
                   name="year" 
-                  class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" 
+                  class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 text-black" 
                   placeholder="E.g. Second Year" 
                   required/>
               </div>
@@ -97,7 +97,7 @@ import Layout from "../layouts/Layout.astro";
                 <h2 class="font-semibold mb-2">What are you interested in? (required)</h2>
                 <select 
                   name="role" 
-                  class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" 
+                  class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 text-black" 
                   required>
                   <!-- need to figure out how to have this always up to date, or we have to manually change it as our needs change-->
                   <option value="" disabled selected>Select an option</option>
@@ -112,7 +112,7 @@ import Layout from "../layouts/Layout.astro";
           <div class="mb-6">
             <h2 class="font-semibold mb-2">Anything else you would like us to know?</h2>
             <textarea  
-              class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" 
+              class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 text-black" 
               name="message" 
               rows="10"></textarea>
           </div>
