--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@
             <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">About</h2>
             <ul class="text-gray-500 dark:text-gray-400 font-medium">
                 <li class="mb-4">
-                    <a href="/about" class=" hover:underline">About</a>
+                    <a href="/" class=" hover:underline">About</a>
                 </li>
             </ul>
         </div>
