--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -18,7 +18,7 @@
                     <a href="/volunteers" class="hover:underline">Volunteers</a>
                 </li>
                 <li class="mb-4">
-                    <a href="/mentees" class="hover:underline">Mentees</a>
+                    <a href="/students" class="hover:underline">Mentees</a>
                 </li>
             </ul>
         </div>
@@ -29,7 +29,7 @@
                     <a>uafc@ualberta.ca</a>
                 </li>
                 <li class="mb-4">
-                    <a href="/contact" class="hover:underline">Contact Us</a>
+                    <a href="/contact-us" class="hover:underline">Contact Us</a>
                 </li>
             </ul>
         </div>
