--- a/src/pages/ourteam.astro
+++ b/src/pages/ourteam.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Future Creators | Our team">
   <main>
-    <p>Our team page of Future Creators Website</p>
+    <h1 class="text-3xl font-bold text-center mb-8">This page is currently in development.</h1>
     <a href="/" class="underline text-blue-600"
       >Go back to home page
       <span>&rarr;</span>
