updated mentee page url

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ import Layout from "../layouts/Layout.astro";
         <br>
         <div class="text-white text-lg">If you’re a student in grades 5-12 who has a passion for technology, sign up here to build your own free technology project of your choice with guidance from university engineering students!</div>
         <br>
-        <Button text="Become a mentee" href="/mentees" />
+        <Button text="Become a mentee" href="/students" />
       </div>
     </div>
   </main>
