added mentor  for winter 2025 option on volunteers page

--- a/src/pages/volunteers.astro
+++ b/src/pages/volunteers.astro
@@ -105,6 +105,7 @@ import Layout from "../layouts/Layout.astro";
                   <option value="VP Logistics">VP Logistics</option>
                   <option value="VP Marketing">VP Marketing</option>
                   <option value="Project Development">Project Development</option>
+                  <option value="Project Development">Mentorship (Winter 2025)</option>
                 </select>
               </div>
             </div>
