updated volunteer positions

--- a/src/pages/volunteers.astro
+++ b/src/pages/volunteers.astro
@@ -101,11 +101,10 @@ import Layout from "../layouts/Layout.astro";
                   required>
                   <!-- need to figure out how to have this always up to date, or we have to manually change it as our needs change-->
                   <option value="" disabled selected>Select an option</option>
-                  <option value="VP Mentorship">VP Mentorship</option>
-                  <option value="VP Logistics">VP Logistics</option>
+                  <option value="VP Finance">VP Finance</option>
                   <option value="VP Marketing">VP Marketing</option>
-                  <option value="Project Development">Project Development</option>
-                  <option value="Mentorship (Winter 2025)">Mentorship (Winter 2025)</option>
+                  <option value="Project Development (Winter 2025)">Project Development (Winter 2025)</option>
+                  <option value="Mentor (Winter 2025)">Mentor (Winter 2025)</option>
                 </select>
               </div>
             </div>
