--- a/src/pages/contact-us.astro
+++ b/src/pages/contact-us.astro
@@ -71,8 +71,8 @@ import Layout from "../layouts/Layout.astro";
         </div>
         <button type="submit" class="w-full bg-sky-950 text-white py-3 rounded-lg hover:bg-blue-700 transition duration-200">Submit</button>
         <input type="hidden" name="_next" value="https://www.uafc.ca/">
-        <!-- disables captcha -->
-        <input type="hidden" name="_captcha" value="false">
+        <!-- disables captcha --> | Jan 7, 2025: Re enabled due to spam
+        <!-- <input type="hidden" name="_captcha" value="false"> -->
       </form>
     </div>
 
