added captcha back to volunteers page form

--- a/src/pages/volunteers.astro
+++ b/src/pages/volunteers.astro
@@ -122,8 +122,8 @@ import Layout from "../layouts/Layout.astro";
             Sign Up
           </button>
           <input type="hidden" name="_next" value="https://www.uafc.ca/">
-          <!-- disables captcha -->
-          <input type="hidden" name="_captcha" value="false">
+          <!-- disables captcha | Jan 7, 2025: Re enabled due to spam -->
+          <!-- <input type="hidden" name="_captcha" value="false"> -->
         </form>
       </div>
     </div>
